# sfta

./: CHANGELOG.md  README.md  app.py  demo  demo_scripting.py  publish  pyproject.toml  sfta.py  test  test_sfta.py
.github/workflows/: main.yml  publish.yml
demos/: barlow-1973.txt  barrere-2020.txt  dev.txt  ferdous-2007.txt  readme-example.txt  special-values.txt  staircase.py  staircase.txt
demos/barlow-1973.txt.out/: events.tsv  gates.tsv
erroneous/: LabelAlreadySetException.txt
exceptions/: Event.BadFloatException.txt  Event.BadProbabilityException.txt  Event.BadRateException.txt  Event.QuantityAlreadySetException.txt  Event.QuantityNotSetException.txt  Event.UnrecognisedKeyException.txt  FaultTree.BadIdException.txt  FaultTree.BadLineException.txt  FaultTree.CircularGateInputsException.txt  FaultTree.DanglingPropertySettingException.txt  FaultTree.DuplicateIdException.txt  FaultTree.PropertyDeclarationException.txt  FaultTree.SmotheredObjectDeclarationException.txt  FaultTree.UnspacedObjectDeclarationException.txt  Gate.BadTypeException.txt  Gate.ConjunctionBadTypesException.txt  Gate.DisjunctionBadTypesException.txt  Gate.InputsAlreadySetException.txt  Gate.InputsNotSetException.txt  Gate.LabelAlreadySetException.txt  Gate.MissingInputsException.txt  Gate.TypeAlreadySetException.txt  Gate.TypeNotSetException.txt  Gate.UnknownInputException.txt
sfta/: cli.py  core.py  main.py  output_handling.py  utilities.py
src/: content_manager.py  context_manager.py  main.py  output_handling.py
tests/: test_core.py  test_sfta.py  test_utilities.py
(+199 files in other folders)
