[build-system]
requires = ["flit_core >=3.8,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "sfta"
requires-python = ">=3.11"
authors = [{name="Conway", email="pypi.sheep257@passmail.net"}]
description = "Slow Fault Tree Analyser (SFTA)"
readme = "README.md"
keywords = ["fault tree", "minimal cutsets"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/yawnoc/sfta"
Issues = "https://github.com/yawnoc/sfta/issues"
Changelog = "https://github.com/yawnoc/sfta/blob/master/CHANGELOG.md"

[project.scripts]
sfta = "sfta.cli:main"
